--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-
+cv2==4.5.3
+matplotlib==3.5.1
+numpy==1.21.1
+pandas==1.4.1
+Pillow==8.4.0
+scipy==1.7.3
+scikit-learn==1.0
+tensorflow==2.8.0
+keras==2.8.0
